--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   html: ^0.15.4
-  http: ^1.0.0
+  dio:
   string_validator: ^1.0.0
 
 dev_dependencies:
